<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.karaokedemo.presentation.viewmodel.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/space_medium"
        android:paddingEnd="@dimen/space_medium"
        tools:context=".presentation.view.activity.EditProfileActivity">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/icon_size_xl"
            android:layout_height="@dimen/icon_size_xl"
            android:layout_marginTop="@dimen/space_medium"
            app:srcCompat="@drawable/ic_person_with_background"
            app:imageUri="@{viewModel.profileImageUri}"
            app:placeholder="@{@drawable/ic_person_with_background}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height_small"
            android:layout_marginTop="@dimen/space_small"
            android:paddingStart="@dimen/space_small"
            android:paddingEnd="@dimen/space_small"
            android:text="@string/lbl_change_photo"
            style="@style/AppTheme.DarkButton.Small"
            app:layout_constraintTop_toBottomOf="@id/img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:hint="@string/lbl_name"
            app:error="@{viewModel.showErrors ? viewModel.nameError : null}"
            app:layout_constraintTop_toBottomOf="@id/btn_change_photo">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusForward="@id/edt_username"
                android:text="@={viewModel.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:hint="@string/lbl_username"
            app:error="@{viewModel.showErrors ? viewModel.usernameError : null}"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@={viewModel.username}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:hint="@string/lbl_biography"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@={viewModel.biography}" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>